finish DeweyIndex.query and tests